--- a/common_style.css
+++ b/common_style.css
@@ -11,12 +11,21 @@
 }
 
 .bento-item {
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
     background: white;
     border: 2px solid gray;
     border-radius: 8px;
+    padding: 20px;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
 }
+
+.bento-item:hover {
+    transform: scale(1.02);
+    overflow: auto;
+    /* box-shadow: 5px 5px 10px blue; */
+}
+
 .bento-content {
     align-items: center;
     text-align: center;
@@ -26,9 +35,22 @@
     grid-row: 1/ span 3;
     grid-column: 1;
 }
-
 .bento-item:nth-child(2) {grid-row: 1; grid-column: 2;}
 .bento-item:nth-child(3) {grid-row: 2; grid-column: 2;}
-.bento-item:nth-child(4) {grid-row: 3; grid-column: 2;}
+/* .bento-item:nth-child(4) {grid-row: 3; grid-column: 2;} */
+.bento-item:nth-child(4) {grid-row: 3/ span 2; grid-column: 2;}
+
 .bento-item:nth-child(5) {grid-row: 4; grid-column: 1;}
-.bento-item:nth-child(6) {grid-row: 4; grid-column: 2;}
+
+/* .bento-item:nth-child(5) {
+    grid-row: 3/ span 2;
+    grid-column: 2;
+} */
+
+/* .bento-item:nth-child(6) {grid-row: 4; grid-column: 2;} */
+
+.bento-img {
+    width: 200px;
+    height:200px;
+
+}
