--- a/common_style.css
+++ b/common_style.css
@@ -1,6 +1,9 @@
-/* body {
-
-} */
+body {
+    background: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 
 .bento-grid {
     display: grid;
@@ -10,9 +13,10 @@
     padding: 2rem;
 }
 
-.bento-item {
+.bento-item-click, .bento-item-noclick {
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
-    background: white;
+    /* background: white; */
+    background: rgba(130, 129, 129, 0.2);
     border: 2px solid gray;
     border-radius: 8px;
     padding: 20px;
@@ -20,7 +24,7 @@
     justify-content: center;
 }
 
-.bento-item:hover {
+.bento-item-click:hover {
     transform: scale(1.02);
     overflow: auto;
     /* box-shadow: 5px 5px 10px blue; */
@@ -31,16 +35,16 @@
     text-align: center;
 }
 
-.bento-item:nth-child(1) {
+.bento-item-noclick:nth-child(1) {
     grid-row: 1/ span 3;
     grid-column: 1;
 }
-.bento-item:nth-child(2) {grid-row: 1; grid-column: 2;}
-.bento-item:nth-child(3) {grid-row: 2; grid-column: 2;}
+.bento-item-click:nth-child(2) {grid-row: 1; grid-column: 2;}
+.bento-item-click:nth-child(3) {grid-row: 2; grid-column: 2;}
 /* .bento-item:nth-child(4) {grid-row: 3; grid-column: 2;} */
-.bento-item:nth-child(4) {grid-row: 3/ span 2; grid-column: 2;}
+.bento-item-click:nth-child(4) {grid-row: 3/ span 2; grid-column: 2;}
 
-.bento-item:nth-child(5) {grid-row: 4; grid-column: 1;}
+.bento-item-click:nth-child(5) {grid-row: 4; grid-column: 1;}
 
 /* .bento-item:nth-child(5) {
     grid-row: 3/ span 2;
