--- a/common_style.css
+++ b/common_style.css
@@ -5,6 +5,7 @@ body {
     background-size: cover;
 }
 
+/* CSS for index.html */
 .bento-grid {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -14,20 +15,18 @@ body {
 }
 
 .bento-item-click, .bento-item-noclick {
-    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
-    /* background: white; */
-    background: rgba(130, 129, 129, 0.2);
-    border: 2px solid gray;
+    box-shadow: 5px 5px 10px 2px rgba(0,0,0,0.5);
+    background: rgba(83, 151, 253, 0.6);
     border-radius: 8px;
     padding: 20px;
     display: flex;
     justify-content: center;
+    transition: transform 0.3s ease;
 }
 
 .bento-item-click:hover {
-    transform: scale(1.02);
+    transform: scale(1.1);
     overflow: auto;
-    /* box-shadow: 5px 5px 10px blue; */
 }
 
 .bento-content {
@@ -35,26 +34,105 @@ body {
     text-align: center;
 }
 
-.bento-item-noclick:nth-child(1) {
-    grid-row: 1/ span 3;
-    grid-column: 1;
-}
+.bento-item-noclick:nth-child(1) {grid-row: 1/ span 3; grid-column: 1;}
 .bento-item-click:nth-child(2) {grid-row: 1; grid-column: 2;}
 .bento-item-click:nth-child(3) {grid-row: 2; grid-column: 2;}
-/* .bento-item:nth-child(4) {grid-row: 3; grid-column: 2;} */
-.bento-item-click:nth-child(4) {grid-row: 3/ span 2; grid-column: 2;}
-
+.bento-item-noclick:nth-child(4) {grid-row: 3/ span 2; grid-column: 2;}
 .bento-item-click:nth-child(5) {grid-row: 4; grid-column: 1;}
-
-/* .bento-item:nth-child(5) {
-    grid-row: 3/ span 2;
-    grid-column: 2;
-} */
-
-/* .bento-item:nth-child(6) {grid-row: 4; grid-column: 2;} */
 
 .bento-img {
     width: 200px;
     height:200px;
+    border-radius: 20%;
+    margin: 25px;
+}
 
+/* CSS for aboutme.html */
+article ul {
+            list-style: none;
+        }
+
+        .progress {
+            width: 100%;
+            background-color: #d8d8d8;
+            border-radius: 10px;
+            overflow: hidden;
+            height: 18px;
+            margin-top: 6px;
+        }
+
+        .progress-bar {
+            text-align: right;
+            padding-right: 8px;
+            font-weight: 600;
+        }
+
+/* CSS for photography.html */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+    padding: 20px;
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+}
+
+.gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+}
+
+.gallery img:hover {
+    transform: scale(1.05);
+}
+
+.btn {
+    margin-left: 170px;
+}
+
+#card {
+    box-shadow: 5px 5px 10px 2px rgba(0,0,0,0.5);
+    padding: 10px;
+    transition: transform 0.3s ease;
+}
+
+/* Responsive */
+@media (max-width: 1399px) {
+    .gallery {
+        gap: 10px;
+        padding: 15px;
+    }
+
+    .gallery img {
+        border-radius: 6px;
+    }
+
+    .btn {
+        margin-left: 70px;
+    }
+}
+
+@media (max-width: 400px) {
+    .gallery {
+        gap: 10px;
+        padding: 15px;
+    }
+
+    .gallery img {
+        border-radius: 6px;
+    }
+
+    .btn {
+        margin-left: 50px;
+    }
+
+    .bento-item-noclick:nth-child(1) {grid-row: 1/ span 2; grid-column: 1;}
+    .bento-item-click:nth-child(2) {grid-row: 3; grid-column: 1;}
+    .bento-item-click:nth-child(3) {grid-row: 4; grid-column: 1;}
+    .bento-item-noclick:nth-child(4) {grid-row: 6; grid-column: 1;}
+    .bento-item-click:nth-child(5) {grid-row: 5; grid-column: 1;}
 }
